--- a/index.html
+++ b/index.html
@@ -536,9 +536,9 @@
 
 		// install touch events. These also serve to block scrolling / pinching / zooming on phones when p8_is_running
 			// moved event.preventDefault(); calls into pico8_buttons_event (want to let top buttons pass through)
-		addEventListener("touchstart", function(event){ pico8_buttons_event(event, 0); }, {passive: false});
-		addEventListener("touchmove",  function(event){ pico8_buttons_event(event, 1); }, {passive: false});
-		addEventListener("touchend",   function(event){ pico8_buttons_event(event, 2); }, {passive: false});
+		//addEventListener("touchstart", function(event){ pico8_buttons_event(event, 0); }, {passive: false});
+		//addEventListener("touchmove",  function(event){ pico8_buttons_event(event, 1); }, {passive: false});
+		//addEventListener("touchend",   function(event){ pico8_buttons_event(event, 2); }, {passive: false});
 
 
 		// load and run script (if not exported w/ script bundled inside html) 
